Einführung zum relationalen Modell
git-svn-id: https://svn.lug-jena.de/uni-skripte@2696 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuespert-dbs1/skript.ltx
+++ b/kuespert-dbs1/skript.ltx
@@ -63,6 +63,7 @@
 \usepackage{tikz-er2}
 \usepackage{braket}
 \usepackage{listings}
+\usepackage{booktabs}
 
 %\usetikzlibrary{positioning}
 
@@ -1023,6 +1024,98 @@ zyklischen gerichteten Graphen vorstellen.
 
 \todo{Weiteres schreiben}
 
+
+\chapter{Das relationale Datenbankmodell}
+
+Die Datenbankmodelle, die wir bisher kennengelernt haben, sind weit
+vom Endbenutzer entfernt. Die Datenbank ist nur von einem
+Anwendungsprogramm heraus ansprechbar. Also benötigt der Benutzer
+Programmierkenntnisse. Die Datenbanksprachen selbst sind schwer zu
+erlernen und fehlerfrei anzuwenden. Somit ist die Benutzung nur einem
+kleinen Kreis von Spezialisten vorbehalten. Diese Eigenschaften
+führten dazu, dass Fehler gemacht wurden. Der modellierte Zustand
+entsprach nicht dem Zustand in der realen Welt und das DBMS wiederum
+konnte Inkonsistenzen nicht feststellen.
+
+Daher sollte ein neues Datenbankmodell geschaffen werden. Dies soll
+eine mathematisch fundierte Grundlage besitzen. Weiterhin soll es eine
+einfache Datenbanksprache geben. Bei der beschreibt der Benutzer, was
+er machen möchte. Die Umsetzung wird der Datenbank überlassen. Die
+Überwachung der Integrität und der Konsistenz wird dem DBMS
+überlassen. Dieses besitzt auch Informationen zur Semantik der Daten
+und kann die Korrektheit automatisch prüfen. Das Ergebnis dieser
+Überlegungen sind die relationalen Datenbanken.
+
+Ab Mitte der 1970er Jahre gab es von IBM das System~R als Prototyp
+sowie von der Universität of Berkeley Ingres.  Aus System~R wurde
+später DB2 und Ingres wurde unter dem Namen weiterentwickelt. Davon
+abgeleitet ist unter anderem die Freie Software Postgres. Weitere
+bekannte relationale Datenbanken sind Oracle, Informix, Sybase,
+Adabas~D, MySQL und viele mehr.
+
+\section{Begriffe und Eigenschaften des relationalen Modells}
+
+Bei der Schaffung des Modells achtete man auf eine saubere Trennung
+der Schemas, d.\,h. konzeptionelles und internes Schema sollten
+getrennt sein. Die Darstellung der Daten erfolgt mittels Relationen.
+
+\begin{defini}[Relation]\label{def:relation}
+  Seien $D_{1}, D_{2},\dotsc,D_{n}$ Wertebereiche (Domains). Dann
+  heißt $R\subseteq D_{1}\times D_{2}\times\dotsc\times D_{n}$ mit
+  $n\geq 1$ eine \highl{Relation}.
+\end{defini}
+
+\begin{defini}[Relation]
+  Die Zahl $n$ aus \autoref{def:relation} wird als \highl{Grad} oder
+  \highl{Stelligkeit} der Relation bezeichnet.
+\end{defini}
+
+\begin{defini}[Element, Komponente]
+  Ein Element $r\in R$ mit $r= (d_{1},\dotsc, d_{n})$ für $d_{i}\in
+  D_{i}$ heißt \highl{Tupel} und $d_{i}$ ist die
+  \highl[Komponente]{$i$-te Komponente} des Tupels.
+\end{defini}
+
+\begin{bsp}
+  Seien $D_{1}= \{r,g,b\}$ und $D_{2}=\{0,1\}$. Dann erhalten wir das
+  kartesische Produkt $D_{1}\times
+  D_{2}= \{(r,0), (r,1), (g,0), (g,1), (b,0), (b,1)\}$. Etwaige
+  Relationen können sein: $R_{1}= \{\}, R_{2}= \{(r,0)\}, R_{3}=
+  \{(g,1), (b,0), (r,1)\}$.
+
+  Die Relationen können ebenfalls als Tabellen aufgefasst werden.
+  \begin{table}[htb]
+    \centering
+    \begin{tabular}{|c|c|}
+      \toprule
+      a & a\\ 
+      \bottomrule
+    \end{tabular}
+    \caption{Relation $R_1$}
+  \end{table}
+
+  \begin{table}[htb]
+    \centering
+    \begin{tabular}{|c|c|}
+      \toprule
+      r & 0\\
+      \bottomrule
+    \end{tabular}
+    \caption{Relation $R_2$}
+  \end{table}
+
+  \begin{table}[htb]
+    \centering
+    \begin{tabular}{|c|c|}
+      \toprule
+      g & 1\\
+      b & 0\\
+      r & 1\\
+      \bottomrule
+    \end{tabular}
+    \caption{Relation $R_3$}
+  \end{table}
+\end{bsp}
 
 \clearpage
 \appendix
