--- a/kuespert-dbs1/skript.ltx
+++ b/kuespert-dbs1/skript.ltx
@@ -300,7 +300,7 @@ Datenbanksystem stellen?
 \item[Benutzerfreundlichkeit] Die Datenabfrage soll so
   benutzerfreundlich wie möglich sein.
 \item[Sicherheit] Der Punkt Sicherheit hat wieder mehrere Aspekte. Zum
-  einen soll es Sicherheit vor Datenverlsut geben. Also auch bei einem
+  einen soll es Sicherheit vor Datenverlust geben. Also auch bei einem
   plötzlichen Ausfall des Servers sollen die Daten nicht komplett
   verloren sein. Weiterhin sollte kein Unbefugter auf Daten zugreifen
   oder diese gar ändern können. Insbesondere ist die Rechteverwaltung
