Übevolle hbox raus
git-svn-id: https://svn.lug-jena.de/uni-skripte@2710 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuespert-dbs1/skript.ltx
+++ b/kuespert-dbs1/skript.ltx
@@ -328,7 +328,7 @@ wie ein roter Faden durch die Unterlagen.
 
 \begin{defini}[DBMS, DBVS]
   Ein \highl{Datenbankmanagementsystem} (\highl{DBMS}) oder
-  \highl{Datenbankverwaltungssystem} (\highl{DBVS}) verwaltet die
+  \highl[Datenbankverwaltungssystem]{-verwaltungssystem} (\highl{DBVS}) verwaltet die
   Datenbestände, d.\,h. alle Zugriffe gehen \emph{ausschließlich} über
   das DBMS. Es übt die Kontrolle über die Datenbestände aus.
 \end{defini}
