Einführung zu SQL
git-svn-id: https://svn.lug-jena.de/uni-skripte@2712 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuespert-dbs1/skript.ltx
+++ b/kuespert-dbs1/skript.ltx
@@ -1538,6 +1538,55 @@ müssen.
 \end{defini}
 
 
+\section{Structured Query Language}
+
+Die Structured Query Language (SQL) ist eine Datenbanksprache zur
+Definition, Abfrage und Manipulation von Daten. Es ist als Norm der
+Reihe DIN ISO/IEC 9075 festgelegt. Die Bezeichnung der Sprache stammt
+vom Vorgänger SEQUEL (für Structured English Query Language) ab. Das
+Wort war eingetragenes Warenzeichen einer anderen Firma. Daher
+erfolgte eine Umbenennung. Seit 1982 ist die Sprache genormt. Seither
+gab es folgende Schritte:
+\begin{itemize}
+\item 1986 wird SQL1 als ANSI"=Standard verabschiedet
+\item 1987 wird SQL1 von der ISO als Standard verabschiedet
+\item 1992 wird SQL2 oder SQL-92 von der ISO als Standard verabschiedet
+\item 2003 SQL3 oder SQL:1999
+\item 2003 Standard SQL:2003 ISO/IEC 9075:2003 als Nachfolger von SQL3
+\item 2006 Standard SQL:2006 ISO/IEC 9075-14:2006 Standardisierung im
+  Zusammenhang mit XML
+\item 2008 aktuelle Revision SQL:2008 ISO/IEC 9075:2008
+\end{itemize}
+
+\subsection{Datendefinition mit SQL}
+\lstset{language=SQL}
+Innerhalb von SQL sind Datendefinition und -manipulation
+vereinheitlicht. Einige Anweisungen getrennt nach der jeweiligen Ebene
+finden sich in \autoref{tab:dd-sql}.
+
+\begin{table}[htb]
+  \centering
+  \begin{tabular}{l|l|l}
+    \toprule
+    \multicolumn{3}{c}{Ebenen}
+    externe &  konzeptionelle & interne\\
+    \midrule
+    \lstinline{create view} & \lstinline{create table} &
+    \lstinline{create index}\\
+    \lstinline{drop view} & \lstinline{alter table} & \lstinline{alter
+    index}\\
+    & \lstinline{drop table} & \lstinline{drop index}\\
+    & \lstinline{create domain} & \\
+    & \lstinline{alter domain} & \\
+    & \lstinline{drop domain} & \\
+    \bottomrule
+  \end{tabular}
+  \caption{Überblick zu Datendefinitionsanweisungen}
+  \label{tab:dd-sql}
+\end{table}
+
+
+
 \clearpage
 \appendix
 \begin{thebibliography}{99}
