--- a/kuespert-dbs1/skript.ltx
+++ b/kuespert-dbs1/skript.ltx
@@ -1589,6 +1589,61 @@ finden sich in \autoref{tab:dd-sql}.
 Im folgenden sollen einige SQL"=Anweisungen beispielhaft erwähnt und
 erklärt werden.
 
+
+\paragraph{\texttt{CREATE TABLE}}
+
+Die Anweisung \lstinline-CREATE TABLE- erzeugt eine $k$"=spaltige
+Tabelle. Gemäß untenstehender Syntax wird das Relationenschema über
+spalteK/wertebereichK definiert.
+
+\begin{lstlisting}
+CREATE TABLE relationenschema
+(spalte1 wertebereich1 [NOT NULL]
+...
+spalteK wertebereichK [NOT NULL])
+\end{lstlisting}
+\help{Warum wird das Listing nicht angezeigt?}
+Als Datentypen existieren in der Regel Integer, Float, Character und
+andere produktspezifische. Die obige Klausel \lstinline-NOT NULL-
+verbietet das Auftreten von nicht definierten Werten.
+
+Der aufmerksame Leser wird festgestellt haben, dass kein Schlüssel
+zugewiesen wurde. Die SQL"=Norm erzwingt keinen Primärschlüssel. Daher
+können Tabellen durchaus Duplikate aufweisen. Mit der Anweisung
+\lstinline-PRIMARY KEY (spalteN)- wird ein Primärschlüssel zugewiesen
+und mittels \lstinline-FOREIGN KEY (spalteN)- ein Fremdschlüssel.
+
+Die Klausel \lstinline-default- erlaubt es einen Standardwert
+anzugeben und mit \lstinline-check- werden Integritätsbedingungen
+angegeben.
+
+\paragraph{\texttt{CREATE DOMAIN}}
+
+Diese Anweisung ermöglicht die Vereinbarung benutzerspezifischer
+Wertebereiche. Ein Beispiel ist die Angabe eines Fachgebiets:
+\begin{lstlisting}
+CREATE DOMAIN Fachgebiet varchar (20)
+  default 'Informatik'
+CREATE TABLE buch
+(invnr integer PRIMARY KEY,
+Gebiet Fachgebiet,
+titel varchar (30),
+ISBN char (13),
+Autor varchar (30))
+\end{lstlisting}
+
+\paragraph{\texttt{ALTER TABLE}}
+
+Die Anweisung dient zum Hinzufügen neuer Attribute zu einer Tabelle
+bzw. zum Löschen von Tabellenspalten. Falls es Probleme bei der
+Anwendung gibt, ist zu beachten, dass dies erst Bestandteil von SQL2
+war.
+
+\todo[inline]{Weitere Anweisungen einfügen. Die weiteren
+  SQL-Anweisungen werden eventuell später nachgetragen. Details bitte vorerst
+  der Dokumentation entnehmen}
+
+
 \clearpage
 \appendix
 \begin{thebibliography}{99}
