--- a/kuespert-dbs1/skript.ltx
+++ b/kuespert-dbs1/skript.ltx
@@ -120,7 +120,7 @@
 
 \pagestyle{headings}
 
-%\newcommand*{\R}{\mathbb{R}}      % reelle Zahlen
+\newcommand*{\R}{\mathbb{R}}      % reelle Zahlen
 %\newcommand*{\C}{\mathbb{C}}      % komplexe Zahlen
 \newcommand*{\N}{\mathbb{N}}      % natürliche Zahlen
 %\newcommand*{\Q}{\mathbb{Q}}      % gebrochene Zahlen
@@ -492,7 +492,7 @@ Allgemeiner lässt sich feststellen: $A=\{a_{1}, a_{2},
 \begin{bsp}
   \begin{itemize}
   \item $\dom(\text{Personalnummer})= \N$
-  \item $\dom(\text{Gehalt}) = \Set{g | 1000\leq g \leq 10000}$
+  \item $\dom(\text{Gehalt}) = \Set{g\in\R | 1000\leq g \leq 10000}$
   \end{itemize}
 \end{bsp}
 
