--- a/vogel-krypt/skript.latex
+++ b/vogel-krypt/skript.latex
@@ -449,7 +449,7 @@ Einzelpunkten.
     UZVJVI JRKQ ZJK XVYVZD\\
     TFZZGR EDFY ABX IFFHXY
     \caption{Verschlüsselung der ersten Zeile mit dem Freimaurercode
-      (2.~Zeile), der Caesar-Chiffre (3.~Zeile) und einem One-Time-Pad (4.~Zeile)}
+      (2.\,Zeile), der Caesar-Chiffre (3.\,Zeile) und einem One-Time-Pad (4.\,Zeile)}
     \label{fig:1}
   \end{figure}
 
@@ -582,7 +582,7 @@ Sicherheit des Kryptosystems ziehen.
   \label{fig:2}
 \end{figure}
 
-\begin{enumerate}[1.~{Schritt:}]
+\begin{enumerate}[1.\,{Schritt:}]
  \item Die Buchstaben im Geheimtext zählen. Für den Text in \autoref{fig:2}
   ergibt sich:
   \begin{center}
@@ -619,7 +619,7 @@ Sicherheit des Kryptosystems ziehen.
  \item Für natürliche Sprachen wie Deutsch ergibt sich in großen Texten eine
   signifikate Verteilung der Buchstaben (\autoref{tab:buchswsk}). Anhand der
   bekannten Verteilung der Buchstaben in der Sprache und der
-  Häufigkeitsanalyse aus dem 1.~Schritt, kann man die Klartextbuchstaben für
+  Häufigkeitsanalyse aus dem 1.\,Schritt, kann man die Klartextbuchstaben für
   einige Geheimtextzeichen bestimmen. So steht z.\,B. in einem deutschen Text das
   am häufigsten auftretende Zeichen für das E. Für den Text in
   \autoref{fig:2} ist also \texttt{e} durch \texttt{C} verschlüsselt.
@@ -920,10 +920,10 @@ Dazu betrachten wir sogenannte \highl[Digramm]{Digramme} oder
 \highl[Bigramm]{Bigramme} (Zweierfolgen von Buchstaben)
 in Texten. Dafür gibt es insgesamt $26^{2}$ mögliche Paarungen. Beispiele für
 Digramme sind \textit{en} und \textit{er}, die mit einer Wahrscheinlichkeit
-von ca.~4\,\% in deutschen Texten auftreten. Das Digramm \textit{ch} tritt mit
-einer Wahrscheinlichkeit von ca.~2,75\,\% und die Digramme \textit{de},
+von ca.\,4\,\% in deutschen Texten auftreten. Das Digramm \textit{ch} tritt mit
+einer Wahrscheinlichkeit von ca.\,2,75\,\% und die Digramme \textit{de},
 \textit{te}, \textit{nd}, \textit{ei}, \textit{ie}, \textit{es}, \textit{in}
-treten mit der Wahrscheinlichkeit von ca.~2\,\% auf.
+treten mit der Wahrscheinlichkeit von ca.\,2\,\% auf.
 
 Damit haben wir bereits eine Anomalie gefunden. Während die Buchstaben
 \textit{e} und \textit{n} häufig auftreten und auch das Digramm aus beiden
@@ -1429,7 +1429,7 @@ einer Erhöhung der Sicherheit. Oft realisiert man eine abwechselnde Folge von
 Substitutionen und Transpositionen mit dem Ziel die folgenden beiden
 \highl[Verschlüsselung!Eigenschaften der]{Eigenschaften der Verschlüsselung}, die auf \textsc{Claude Shannon}, den
 Begründer der Informationstheorie, zurückgehen, zu erreichen:
-\help{Können diese Eigenschaften nicht schon eher kommen? Im 1.~Kapitel}
+\help{Können diese Eigenschaften nicht schon eher kommen? Im 1.\,Kapitel}
 \begin{itemize}
  \item \highl{Diffusion}: Eine Änderung eines Klartextbits bewirkt die
   Änderung von vielen Bits des Geheimtexts -- Nachteil: kleine Fehler
@@ -1488,7 +1488,7 @@ Klartextblocks alle folgenden Geheimtextblöcke neu berechnet werden müssen.
   c_{i} &= E_{K}(m_{i}\oplus c_{i-1}) & m_{i} &= D_{K}(c_{i}) \oplus c_{i-1}
 \end{align*}
 
-Eine Veränderung des $r$.~Geheimtextblocks ändert nur den $r$. und den
+Eine Veränderung des $r$"=ten Geheimtextblocks ändert nur den $r$. und den
 folgenden Klartextblock:
 \begin{align*}
   D_{K}(\tilde{c_{r}}) \oplus c_{r-1} &\ne m_{r}\\
@@ -1710,8 +1710,8 @@ oder Spalte entwickelt wird:
 \begin{gather*}
   \det A = \sum_{j=1}^{n} (-1)^{i+j} a_{ij} A_{ij}
 \end{gather*}
-wobei $A_{ij}$ diejenige Matrix ist, die durch Streichen der $i$.~Zeile und
-$j$.~Spalte aus $A$ entsteht.
+wobei $A_{ij}$ diejenige Matrix ist, die durch Streichen der $i$"=ten Zeile und
+$j$"=ten Spalte aus $A$ entsteht.
 
 Eine Matrix $A$ besitzt eine zu ihr \highl[Matrix!inverse]{inverse Matrix}~$A^{-1}$, d.\,h. es gilt
 \begin{gather*}
@@ -2296,7 +2296,7 @@ umfasst.\cite[S.\,258]{menezes}\cite{wiener}
 Zur Vereinfachung des ganzen, sei die Blocklänge $n=12$ (statt 64) und der
 (Haupt"~)""Schlüssel~$k$ habe die Länge 9 (statt 64). Damit sind die beiden
 Teilblöcke~$L$ und $R$ 6~Bit lang. Die initiale Permutation $IP$ und die
-Permutation im 4.~Schritt seien die Identität, sprich diese Schritte
+Permutation im 4.\,Schritt seien die Identität, sprich diese Schritte
 entfallen.
 
 Die Rundenschlüssel $k_{1},\dotsc,k_{r}\in\Z_{2}^{8}$ werden aus
@@ -2356,7 +2356,7 @@ die erste, 1 für die zweite) und die verbleibenden drei Bits beschreiben als
 Binärzahl interpretiert die Spalte (000 die erste, 111 die achte).
 
 \begin{bsp}
-  Wie sieht nun der Ablauf in der 4.~Runde aus, wenn der
+  Wie sieht nun der Ablauf in der 4.\,Runde aus, wenn der
   Schlüssel~$k=(0100\,11001)$ lautet und die Eingabe $(001\,111\: 101\,011)$
   ist?
 
@@ -2370,7 +2370,7 @@ Binärzahl interpretiert die Spalte (000 die erste, 111 die achte).
     der $S$-Boxen $S_{1}(1\,111) = 3 = (011)$ und $S_{2}(0\,010) = 6 = (110)$.
   \end{enumerate}
 
-  Das Ergebnis der 4.~Runde lautet also $(101\,011\:011\,110)$.
+  Das Ergebnis der 4.\,Runde lautet also $(101\,011\:011\,110)$.
 \end{bsp}
 
 \subsection{Differentielle Kryptoanalyse des DES mit einer Runde}
@@ -2488,8 +2488,8 @@ $i$-ten~Runde ist die Eingabedifferenz der $\ell$-ten~$S$-Box
        k_{i}^{\ell})
      = d^{\ell} \oplus \tilde{d}^{\ell}
 \end{gather}
-Man kann also aus der Ausgabe des Diffusionsschritts (1.~Schritt)
-Rückschlüsse auf die Eingabe des Konfusionsschritts (3.~Schritt) ziehen. Die
+Man kann also aus der Ausgabe des Diffusionsschritts (1.\,Schritt)
+Rückschlüsse auf die Eingabe des Konfusionsschritts (3.\,Schritt) ziehen. Die
 Ausgabedifferenz der $\ell$-ten~$S$-Box ist
 \begin{gather*}
   S_{\ell}(a^{\ell}) \oplus S_{\ell}(\tilde{a}^{\ell})
@@ -2545,7 +2545,7 @@ f_{k_{3}}(\tilde{R}_{2})$. Die Ausgabedifferenz der dritten Runde ist also
 \end{gather*}
 
 Die Eingabedifferenz $L_{0}^{*} = L_{0}\oplus\tilde{L}_{0}$ ist bekannt. Da
-die Permutation (4.~Schritt) eine lineare Abbildung ($g(a)+g(b)=g(a+b)$) ist,
+die Permutation (4.\,Schritt) eine lineare Abbildung ($g(a)+g(b)=g(a+b)$) ist,
 erhält man die Ausgabedifferenz des Konfusionsschritts
 \begin{gather*}
   L_{3}^{*}\oplus L_{0}^{*} = f_{k_{3}}(R_{2}) \oplus f_{k_{3}}(\tilde{R}_{2})
@@ -2558,7 +2558,7 @@ $f_{k_{3}}(R_{2})$ die Diffusion $D(R_{2})$ bestimmen. Damit hat wieder wieder
 die Situation wie im Fall mit einer Runde erreicht: Man kennt die Ausgabe des
 Diffusionsschritts für $f_{k_{3}}(R_{2})$ und $f_{k_{3}}(\tilde{R}_{2})$ und
 man kennt die Ausgabedifferenz des Konfusionsschritts $S(a)\oplus
-S(\tilde{a})$. Man ist also in der Lage, den Schlüssel für die 3.~Runde zu
+S(\tilde{a})$. Man ist also in der Lage, den Schlüssel für die 3.\,Runde zu
 bestimmen. Mit diesem Schlüssel kann man dann $f_{k_{3}}(R_{2})$ und damit
 $L_{2} = L_{3}\oplus f_{k_{3}}(R_{2})$ bestimmen.
 
@@ -2643,7 +2643,7 @@ Brauchen ein zweites Klartextpaar: z.\,B. $(L_{0}, R_{0}) = (010\,111,
 011\,011)$ und $(L_{0}', R_{0}') = (101\,110, 011\,011)$ mit $(L_{3}, R_{3}) =
 (001\,010, 001\,011)$ und $(L_{3}', R_{3}') = (011\,000, 100\,100)$.
 
-1.~Aufgabe: Bestimme $K_{3}^{L}$ und $K_{3}^{R}$. 2.~Aufgabe: Bestimme $K$.
+1.\,Aufgabe: Bestimme $K_{3}^{L}$ und $K_{3}^{R}$. 2.\,Aufgabe: Bestimme $K$.
 
 Angenommen $K_{3} = (x_{1} x_{2} x_{3} x_{4} x_{5} x_{6} x_{7} x_{8})$.
 Dann hat $K$ die Gestalt $K=(x_{p} x_{1} x_{2} x_{3} x_{4} x_{5} x_{6} x_{7})$.
@@ -2736,7 +2736,7 @@ acht Bit.
   $2^{55}$~Schlüssel zu testen), mit erschöpfender Suche war dies 1977 defacto
   nicht möglich.
 
-  1997: setzt die RSA-Data-Security US\,\$~10\,000 für die Dechiffrierung
+  1997: setzt die RSA-Data-Security US-\$~10\,000 für die Dechiffrierung
   eines DES-Textes aus. Nach 5 Monaten war der Schlüssel ermittelt von \textsc{Ronald
   Vesper} -- durch organisiertes Parallelrechnen via Internet (25\,\%
   des Schlüsselraums wurde getestet.)
@@ -2840,7 +2840,7 @@ $2^{16}$~($\boxplus$) und Multiplikation modulo $2^{16}+1$~($\odot$) eingesetzt.
 %  \item $x_{4}' = \alpha_{4} \oplus \zeta$
 % \end{enumerate}
 
-Nach der 8.~Runde folgt eine Schlussrunde:
+Nach der 8.\,Runde folgt eine Schlussrunde:
 \begin{align*}
   x_{1}' &= x_{1}\odot k_{9_{1}} &
      x_{2}' &= x_{2}\boxplus k_{9_{2}} &
@@ -3158,7 +3158,7 @@ Ausgabe: ggT := b[i], u := u[i], v := v[i];
       2& 2& 26-2\cdot 12=2& 0-2\cdot1=-2& 1-2\cdot(-8) = 17\\
     \end{array}
   \end{gather*}
-  Abbruch im 3.~Schritt, da $2\mid12$. Der größte gemeinsame Teiler von 220
+  Abbruch im 3.\,Schritt, da $2\mid12$. Der größte gemeinsame Teiler von 220
   und 26 ist also 2 und es gilt:
   \begin{gather*}
     2 = -2\cdot 220 + 17\cdot 26 = -440 + 442
@@ -3176,7 +3176,7 @@ Ausgabe: ggT := b[i], u := u[i], v := v[i];
       2& 1& 157-1\cdot 156=1& 0-1\cdot1=-1& 1-1\cdot(-16) = 17\\
     \end{array}
   \end{gather*}
-  Abbruch im 3.~Schritt, da $1\mid156$. 2668 und 157 sind also teilerfremd
+  Abbruch im 3.\,Schritt, da $1\mid156$. 2668 und 157 sind also teilerfremd
   und es gilt:
   \begin{gather*}
     1 = -1\cdot 2668 + 17\cdot 157 = -2668 + 2669
@@ -3208,7 +3208,7 @@ zu $p$ bezüglich~$\odot$.
   Gegeben seien $a(x) = m(x) = x^{8} + x^{4} + x^{3} + x +1 = b_{0}$ und
   $b(x) = x^{7} + x^{6} + x^{3} + x + 1 = b_{1}$. (Elemente des $\F_{256}$)
 
-  \begin{enumerate}[1.~{Schleifendurchlauf}]
+  \begin{enumerate}[1.\,{Schleifendurchlauf}]
    \item $(x^{8} + x^{4} + x^{3} + x + 1) : (x^{7} + x^{6} + x^{3} + x +1) =x+1$\\
     $\oplus (x^{8} +x^{7} + x^{4} + x^{2} +x)$\\
     ---\\
@@ -4034,7 +4034,7 @@ $g_{n,m}\colon \Z_{n} \mapsto \Z_{n}$ so definiert
 
 Hier gibt es das gleiche Problem wie beim diskreten Logarithmus, dass
 $g_{n,m}$ nicht eindeutig ist, d.\,h. die $m$-te~Wurzel ist keine Funktion.
-Beispielsweise ist die 4.~Wurzel von 16 für $n=21$ gleich
+Beispielsweise ist die 4.\,Wurzel von 16 für $n=21$ gleich
 \begin{gather*}
   g_{21,4}(5) = 5^{4}\mod{21} = 16 = 2^{4}\mod 21 = g_{21,4}(2)
 \end{gather*}
@@ -4222,7 +4222,7 @@ ist eine multiplikative Gruppe der Ordnung $\phi(n)$.
       &\equiv x^{\tilde{u}\cdot\phi(n)+1}\pmod{n}
     \end{align*}
 
-    \begin{enumerate}[1.~{Fall}]
+    \begin{enumerate}[1.\,{Fall}]
      \item Für $x\equiv0\pmod{p}$ gilt die Kongruenz trivialer Weise.
       \begin{gather*}
         a\equiv 0^{\tilde{u}\cdot\phi(n)+1} \equiv 0 \equiv x\pmod{p}
@@ -4728,7 +4728,7 @@ $m\equiv c\cdot \alpha^{n-1-b}\pmod{n}$ entschlüsseln. \autoref{tab:elgamal}
     nicht in Polynomialzeit machbar ist.
   \end{itemize}
 
-  \help{Daraus folgt aber nur, dass $Elgamal \leq_{m}^{p} diskr.~Log$, aber gilt
+  \help{Daraus folgt aber nur, dass $Elgamal \leq_{m}^{p} diskr.\,Log$, aber gilt
     auch die umgekehrte Relation?}
 \end{bemerk}
 
@@ -5214,7 +5214,7 @@ prüfen kann. \autoref{tab:zero-know}
   Press, 1995
  \bibitem{bauer} F.\,Bauer: "`Entzifferte Geheimnisse"', Springer, 2000
  \bibitem{beutelspacher} A.\,Beutelspacher, J.\,Schwenk, K.-D.\,Wolfenstetter:
-  "`Moderne Verfahren der Kryptographie"', 6.~Auflage, Vieweg, 2006
+  "`Moderne Verfahren der Kryptographie"', 6.\,Auflage, Vieweg, 2006
  \bibitem{delfs} H.\,Delfs, H.\,Knebl: "`Introduction to cryptography"',
   Springer, 2002
  \bibitem{goldreich} O.\,Goldreich: "`Foundamentals of cryptography"',
@@ -5233,12 +5233,12 @@ prüfen kann. \autoref{tab:zero-know}
   IDEA"', Advances in Cryp\-to\-lo\-gy---CRYPTO '93, Springer-Verlag, 1994
  \bibitem{luby} M.\,Luby,  C.\,Rackoff: "`How to Construct
   Pseudorandom Permutations and Pseudorandom Functions."', SIAM Journal on
-  Computing, vol. 17, 1988, S.~373--386,\\
+  Computing, vol. 17, 1988, S.\,373--386,\\
   \url{http://citeseer.ist.psu.edu/naor96construction.html} (Überarbeitete
   Fassung)
  \bibitem{matsui1} Mitsuru Matsui: "`Linear cryptanalysis method for DES
   cipher"', Advances in Cryp\-to\-lo\-gy""---EUROCRYPT '93 Proceedings,
-  Springer-Verlag, 1994, S.~386--397
+  Springer-Verlag, 1994, S.\,386--397
  \bibitem{des-diff-ana} Eli Biham, Adi Shamir: "`Differential
   Cryptanalysis of DES-like Cryptosystems"', CRYPTO'90 \& Journal of
   Cryptology, vol. 4, No. 1, 1991,\\
