textuelle Vorkommen von \gdwdef eliminiert.
git-svn-id: https://svn.lug-jena.de/uni-skripte@2728 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/vogel-krypt/skript.latex
+++ b/vogel-krypt/skript.latex
@@ -1578,8 +1578,8 @@ folgende Weise übertragen:
 \end{align*}
 
 Für jedes $[a]_{k}$ existiert ein \highl[Element!inverses]{inverses Element bzgl. Addition}
-$-[a]_{k} := [-a]_{k} = [k-a]_{k}$. Ein Element $[a]_{k}$ heißt
-\highl{Einheit} des Restklassensystems \gdwdef es existiert ein $[b]_{k}$, so dass
+$-[a]_{k} := [-a]_{k} = [k-a]_{k}$. Ein Element $[a]_{k}$ heißt genau dann
+\highl{Einheit} des Restklassensystems, wenn ein $[b]_{k}$ existiert, so dass
 $[a]_{k} \cdot [b]_{k} = [1]_{k}$. In diesem Fall heißt $[b]_{k}$
 \highl[Element!inverses]{inverses Element bzgl. Multiplikation} zu $[a]_{k}$.
 
@@ -2940,7 +2940,7 @@ in Äquivalenzklassen modulo~$m$ zerlegen lassen:
 \end{gather*}
 Damit ergibt sich für $m>1$ ein Ring $[\Z_{m}, +,\cdot]$ mit dem Nullelement
 $0 := [0]_{m}$, dem Einselement $1 := [1]_{m}$ und insgesamt $\abs{\Z_{m}}=m$
-Elementen. Ein Element $a\in\Z_{m}$ heißt Einheit \gdwdef es ein inverses
+Elementen. Ein Element $a\in\Z_{m}$ heißt genau dann Einheit, wenn es ein inverses
 Element $b$ mit $a\cdot b=1$ gibt. Es gilt: $a$ ist Einheit in $\Z_{m}$ \gdw
 $\ggT(a,m) = 1$ (\autoref{lem:5}).
 
@@ -2964,11 +2964,13 @@ Die Addition und Multilikation von zwei Polynomen erfolgt wie üblich
 komponentenweise. Damit bildet die Struktur $[R[x], +, \cdot]$ einen
 (abzählbar unendlichen) \highl{Polynomring}.
 
-Ein Polynom~$p\in R[x]$ heißt \highl[Polynom!reduzibles]{reduzibel}\index{reduzibel} \gdwdef es zwei
+Ein Polynom~$p\in R[x]$ heißt genau dann
+\highl[Polynom!reduzibles]{reduzibel}\index{reduzibel}, wenn es zwei
 Polynome~$r,s\in R[x]$ vom Grad größer 0 gibt, so dass man $p$ als Produkt von
 $r$ und $s$ schreiben kann; $p(x) = r(x)\cdot s(x)$.
 
-Ein Polynom~$p\in R[x]$ heißt \highl[Polynom!irreduzibles]{irreduzibel}\index{irreduzibel} \gdwdef es nicht reduzibel
+Ein Polynom~$p\in R[x]$ heißt genau dann
+\highl[Polynom!irreduzibles]{irreduzibel}\index{irreduzibel}, wenn es nicht reduzibel
 ist, d.\,h. es keine zwei Polynome $r,s\in R[x]$ gibt, so dass $p=r\cdot s$
 ist.
 
@@ -3898,8 +3900,8 @@ der Einwegfunktion, das Funktionen beschreibt, die einfach zu berechnen, aber
 "`schwer"' zu invertieren sind.
 
 \begin{defini}
-  Eine Funktion $f\colon\N\rightarrow\N$ ist eine \highl{Einwegfunktion}
-  \gdwdef sie die folgenden Eigenschaften besitzt
+  Eine Funktion $f\colon\N\rightarrow\N$ ist genau dann eine
+  \highl{Einwegfunktion}, wenn sie die folgenden Eigenschaften besitzt
   \begin{itemize}
    \item $f$ ist im worst case in Polynomialzeit zu berechnen, d.\,h.
     $f\in\FP$ und 
@@ -3984,8 +3986,8 @@ zeigen, dass $\mathrm{P}\ne\NP$ ist.
 \subsection{Falltür-Einwegfunktionen}
 
 \begin{defini}
-  Eine Zahlenfunktion~$f\colon X\rightarrow Y$ heißt
-  \highl{Falltür-Einwegfunktion} (engl. trap door one way function) \gdwdef
+  Eine Zahlenfunktion~$f\colon X\rightarrow Y$ heißt genau dann
+  \highl{Falltür-Einwegfunktion} (engl. trap door one way function), wenn
   sie die folgenden Bedingungen erfüllt:
   \begin{itemize}
    \item Die Funktion ist in Polynomialzeit berechenbar; $f\in\FP$
@@ -4072,7 +4074,8 @@ ist eine multiplikative Gruppe der Ordnung $\phi(n)$.
 
 \begin{defini}
   \label{def:1}
-  Eine Zahl~$a$ ($1\leq a< n$) heißt \highl[Wurzel!primitive]{primitive Wurzel} von $n$ \gdwdef
+  Eine Zahl~$a$ ($1\leq a< n$) heißt genau dann
+  \highl[Wurzel!primitive]{primitive Wurzel} von $n$, wenn
   $a$ die folgenden Eigenschaften erfüllt
   \begin{itemize}
    \item $a$ und $n$ sind Teilerfremd ($\ggT(a,n)=1$) und
