Definition der phi-Funktion korrigiert
git-svn-id: https://svn.lug-jena.de/uni-skripte@2729 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/vogel-krypt/skript.latex
+++ b/vogel-krypt/skript.latex
@@ -1585,10 +1585,13 @@ $[a]_{k} \cdot [b]_{k} = [1]_{k}$. In diesem Fall heißt $[b]_{k}$
 
 \begin{lemma}
   \label{lem:5}
-\emph{Die untenstehende Definition der $\phi$-Funktion ist nicht korrekt!}
-  Die Eulersche $\phi$-Funktion $\phi(k)$ ist die Anzahl der Mengen $\{a,b\}\subset
-  \{1,\dotsc,k-1\}^{2}$, für die gilt $\ggT(a,b)=1$. Also gibt es in $\Z_{k}$
-  genau $\phi(k)$ Einheiten.
+  Die Eulersche $\phi$-Funktion $\phi(k)$ ist die Anzahl der der
+  positiven ganzen Zahlen $a\leq k$ an, die zu dieser teilerfremd
+  sind:
+  \begin{gather*}
+    \phi(k) \coloneq\abs{\Set{1\leq a\leq k | \ggT (a,k)=1}}
+  \end{gather*}
+  In $\Z_{k}$ gibt es genau $\phi(k)$ Einheiten.
 
   \begin{proof}
 \emph{Im Beweis stimmt ebenfalls etwas nicht. Sei $k=7$. Dann wäre
@@ -1606,7 +1609,7 @@ $[a]_{k} \cdot [b]_{k} = [1]_{k}$. In diesem Fall heißt $[b]_{k}$
 \end{lemma}
 
 Für das Produkt zweier Zahlen~$p$ und $q$, die zueinander teilerfremd sind,
-ist $\phi(p\cdot q)=\phi(p)\cdot\phi(q)$ --~$\phi$ multiplikativ.
+ist $\phi(p\cdot q)=\phi(p)\cdot\phi(q)$, d.\,h. $\phi$ ist multiplikativ.
 Falls $k=p$ eine Primzahl ist, dann ist $\phi(p)=p-1$. Es gibt als
 $\phi(p)=p-1$ Einheiten in $\Z_{p}$, womit $\Z_{p}$ ein Körper ist.
 \begin{gather*}
