Paket braket benutzt
Paket braket eingebunden und alle Mengenangaben der Form \{ .. \colon
.. \} umgebaut.

git-svn-id: https://svn.lug-jena.de/uni-skripte@2730 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/vogel-krypt/skript.latex
+++ b/vogel-krypt/skript.latex
@@ -76,6 +76,7 @@
 \usepackage{tabularx}
 \usepackage{pigpen}
 \usepackage{todonotes}
+\usepackage{braket}
 
 % Damit auch die Zeichen im Mathemode in Überschriften fett sind
 % <news:lzfyyvx3pt.fsf@tfkp12.physik.uni-erlangen.de>
@@ -870,8 +871,8 @@ Geheimtextalphabets~$Y$ etwa gleichwahrscheinlich auftreten!
     angeordneten) Buchstaben von $Y$. Siehe \autoref{tab:1}. Wir definieren zwei
     Abbildungen:
     \begin{align*}
-      f_{1}(x_{j}) &= \{ y\in Y\colon y \text{~steht in der $j$. Zeile} \}\\
-      f_{2}(x_{i}) &= \{ y\in Y\colon y \text{~steht in der $i$. Spalte} \}
+      f_{1}(x_{j}) &= \Set{ y\in Y | y \text{~steht in der $j$. Zeile}}\\
+      f_{2}(x_{i}) &= \Set{ y\in Y | y \text{~steht in der $i$. Spalte}}
     \end{align*}
 
     Es sei $m=m_{1}m_{2}\dotso m_{k}$ der zu verschlüsselnde Klartext und
@@ -1563,7 +1564,7 @@ bei der Division durch $k$ den gleichen Rest ($0\leq r<k$) lassen:
 Das zerlegt die ganzen Zahlen in genau $k$~\highl[Restklasse]{Restklassen} $[a]_{k}$. Die
 Menge dieser Restklassen bezeichnet mal als \highl{Faktormenge}~$\Z_{k}$.
 \begin{align*}
-  [a]_{k} &= \{a+lk\colon l\in\Z\} = a+k\cdot\Z
+  [a]_{k} &= \Set{a+lk | l\in\Z} = a+k\cdot\Z
      &&\text{für~} a\in\{0,\dotsc,k-1\} \\
   \Z_{k} &:= \nicefrac{\Z}{\equiv_{k}}
      = \{ [0]_{k}, [1]_{k}, \dotsc, [k-1]_{k} \}
@@ -1589,7 +1590,7 @@ $[a]_{k} \cdot [b]_{k} = [1]_{k}$. In diesem Fall heißt $[b]_{k}$
   positiven ganzen Zahlen $a\leq k$ an, die zu dieser teilerfremd
   sind:
   \begin{gather*}
-    \phi(k) \coloneq\abs{\Set{1\leq a\leq k | \ggT (a,k)=1}}
+    \phi(k) :=\abs{\Set{1\leq a\leq k | \ggT (a,k)=1}}
   \end{gather*}
   In $\Z_{k}$ gibt es genau $\phi(k)$ Einheiten.
 
@@ -1633,13 +1634,13 @@ $1,3,5,7,9,11,15,17,19,21,23,25$.
 Wir betrachten $n\times n$-Matrizen, deren Einträge Elemente
 aus einem beliebigen kommutativen Ring~$[R,+\cdot]$ sind.
 \begin{gather*}
-  R^{n\times n} := \bigl\{ \begin{pmatrix}
+  R^{n\times n} := \Set{ \begin{pmatrix}
                        r_{11} & r_{12} & \dotso & r_{1n}\\
                        r_{21} & r_{22} & \dotso & r_{2n}\\
                        \vdots & \vdots & & \vdots\\
                        r_{n1} & r_{n2} & \dotso & r_{nn}
                      \end{pmatrix}
-                    \colon r_{ij}\in R, 1\leq i,j \leq n\bigr\}
+                    | r_{ij}\in R, 1\leq i,j \leq n}
 \end{gather*}
 Die Matrizenaddition und -multiplikation ist dabei wie üblich.
 
@@ -1649,18 +1650,18 @@ Als \highl[Zeilenvektor]{Zeilen-} (\autoref{eq:zeilenvek}) bzw.
 \highl[Spaltenvektor]{Spaltenvektoren} (\autoref{eq:spaltenvek}) bezeichnet
 man Matrizen der folgenden Form:
 \begin{align}
-  R^{1\times n} &= \{ \begin{pmatrix}b_{1} & b_{2} & \dotso & b_{n}\end{pmatrix}
-                    \colon b_{i}\in R, 1\leq i \leq n\}\label{eq:zeilenvek}\\
-  R^{n\times1} &= \{ \begin{pmatrix}b_{1} & b_{2}&\dotso&b_{n}\end{pmatrix}^{T}
-                    \colon b_{i}\in R, 1\leq i \leq n\}\label{eq:spaltenvek}
+  R^{1\times n} &= \Set{ \begin{pmatrix}b_{1} & b_{2} & \dotso & b_{n}\end{pmatrix}
+                    | b_{i}\in R, 1\leq i \leq n}\label{eq:zeilenvek}\\
+  R^{n\times1} &= \Set{ \begin{pmatrix}b_{1} & b_{2}&\dotso&b_{n}\end{pmatrix}^{T}
+                    | b_{i}\in R, 1\leq i \leq n}\label{eq:spaltenvek}
 \end{align}
 
 Als eine \highl{Permutation}~$\sigma$ bezeichnet man eine Umordnung der
 Elemente eine Menge. Mit $S_{n}$ bezeichnet man die Menge der Permutationen
 einer Menge mit $n$~Elementen.
 \begin{gather*}
-  S_{n} = \bigl\{ \sigma\colon \sigma\colon \{1,\dotsc,n\} \rightarrow
-     \{1,\dotsc,n\} \bigr\}
+  S_{n} = \Set{ \sigma | \sigma\colon \{1,\dotsc,n\} \rightarrow
+     \{1,\dotsc,n\}}
 \end{gather*}
 
 Für eine Permutation~$\sigma\in S_{n}$ bezeichnet man ein Paar
@@ -1848,8 +1849,8 @@ Hieraus folgt dann $A=M^{-1}C$ und weiter $b= c_{0}-m_{0}A$.
 \begin{bemerk}
   In einer halbgeordneten Menge kann man definieren:
   \begin{gather*}
-    \limsup_{k\rightarrow\infty} x_{k} = \inf\{ \sup\{ x_{l}\colon l\geq
-       k\}\colon k\in\N\}
+    \limsup_{k\rightarrow\infty} x_{k} = \inf\Set{ \sup\{ x_{l} | l\geq
+       k\}\colon k\in\N}
   \end{gather*}
   In vollständigen Verbänden existiert stets der Limes superior und Limes
   inferior und es gilt $\liminf_{k\rightarrow\infty} x_{k} \leq
@@ -2998,9 +2999,9 @@ gleichen Restklasse, wenn sie bei der Division durch $m$ den gleichen
 Rest~$r\in\Z_{p}[x]$ vom Grad kleiner~$k$ lassen:
 \begin{align*}
   s(x) &= a(x)\cdot m(x) + r(x)\qquad\text{und}\qquad t(x) =b(x)\cdot m(x)+r(x)\\
-  [r]_{m} &= \{ r(x) + l(x)\cdot m(x)\colon l\in\Z_{p}[x]\}\\
-  \nicefrac{\Z_{p}[x]}{m(x)} &= \{ [r(x)]_{m(x)}\colon r(x)\in \Z_{p}[x],
-     r\text{~vom Grad $<$ dem Grad von $m$}\}
+  [r]_{m} &= \Set{ r(x) + l(x)\cdot m(x) | l\in\Z_{p}[x]}\\
+  \nicefrac{\Z_{p}[x]}{m(x)} &= \Set{ [r(x)]_{m(x)} | r(x)\in \Z_{p}[x],
+     r\text{~vom Grad $<$ dem Grad von $m$}}
 \end{align*}
 Das Polynom~$r$ heißt \highl{Repräsentant} von $s$ und $t$ in $\F_{p^{k}}$ und
 hat die Form
@@ -4053,7 +4054,7 @@ Exkurs in die Zahlentheorie.
 
 Ansatzpunk:
 \begin{gather*}
-  \Z_{n}^{*} := \{ i\colon 1\leq i < n, \ggT(i,n)=1\}
+  \Z_{n}^{*} := \Set{ i | 1\leq i < n, \ggT(i,n)=1}
 \end{gather*}
 ist eine multiplikative Gruppe der Ordnung $\phi(n)$.
 \help{Ist das gleich der Menge der Einheiten in 4.10.1?}
