Diverse Änderungen im Text
· Sätze umgebaut und Schreibfehler korrigiert
· Halbordnung erklärt
· Jahreszahlen bei AES/DES korrigiert
· COPACOBANA erwähnt
· Patentsituation bei IDEA
· Zwei TODOs hinzu
· bibitem mit FIPS 197 eingebaut

git-svn-id: https://svn.lug-jena.de/uni-skripte@2733 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/vogel-krypt/skript.latex
+++ b/vogel-krypt/skript.latex
@@ -1773,8 +1773,8 @@ und der Spezialfall $A=E_{n}$, also $c=m+b$, ist die
 \highl{Vigenère-Chiffre} mit dem Schlüsselwort~$b$.
 
 Man kann auch eine \highl{Blocktransposition} als eine affinlineare
-Abbildung beschreiben. Die für die Blocktransposition genutzte Permutation
-von $\{1,\dotsc,n\}$ sei $\sigma$. Mit $b=0$ und der Matrix~$P_{\sigma} =
+Abbildung beschreiben. Sei $\sigma$ die für die Blocktransposition genutzte Permutation
+von $\{1,\dotsc,n\}$. Mit $b=0$ und der Matrix~$P_{\sigma} =
 (p_{ij})_{n\times n}$ mit
 \begin{gather*}
   p_{ij} =
@@ -1853,7 +1853,9 @@ Hieraus folgt dann $A=M^{-1}C$ und weiter $b= c_{0}-m_{0}A$.
 \end{bemerk}
 
 \begin{bemerk}
-  In einer halbgeordneten Menge kann man definieren:
+  In einer halbgeordneten\footnote{Eine Halbordnung ist eine
+    transitive, reflexive und antisymmetrische Ordnungsrelation.}
+  Menge kann man definieren:
   \begin{gather*}
     \limsup_{k\rightarrow\infty} x_{k} = \inf\Set{ \sup\{ x_{l} | l\geq
        k\}\colon k\in\N}
@@ -2125,9 +2127,10 @@ gelang es durch die Zusammenarbeit von Deep Crack und
 22~Stunden und 15~Minuten zu ermitteln --~mehr als 245 Milliarden
 Schlüssel wurden pro Sekunde getestet.
 
-Im Jahr~1999 wird DES als Standard für die Verschlüsselung der
-amerikanischen Bundesbehörden widerrufen und schließlich 2002 durch den
-Advanced Encryption Standard~(AES) ersetzt.
+Im Jahr~2004 wird die Absetzung von DES als Standard für die
+Verschlüsselung der amerikanischen Bundesbehörden widerrufen, was ein
+Jahr später realisiert wird. Seit 2002 ist der Advanced Encryption
+Standard~(AES) als neuer Algorithmus in Kraft.
 
 Der Data Encryption Standard ist eine symmetrische Blockchiffre und arbeitet
 mit einem Feistel-Netzwerk (\autoref{fig:feistel}). Die Schlüssellänge für die
@@ -2183,7 +2186,7 @@ initialen Permutation\footnote{Die initiale Permutation hat keinen
 Einfluss auf die Sicherheit des Algorithmus'. Sie wurde damals
 eingeführt, um das Laden der Daten in den Chip zu vereinfachen. Da die
 Realisierung der $IP$ in Software jedoch schwieriger ist, wird sie manchmal
-weggelassen.} ($IP$) in den 16~Runden tranformiert und anschließend noch einmal mit
+weggelassen.} ($IP$) in den 16~Runden transformiert und anschließend noch einmal mit
 $IP^{-1}$ permutiert.
 
 \begin{figure}
@@ -2216,7 +2219,7 @@ teilweise bekannt\cite{des-copper} und sie können nur als starre Operationen ver
 werden.
 
 Aber es lässt sich zeigen, dass die beiden Eigenschaften einer Verschlüsselung
-nach \textsc{Claude Shannon} erfüllt sind: Die Änderung der Eingabe in eine $S$-Box
+nach \textsc{Claude Shannon} erfüllt sind: Die Änderung der Eingabe in einer $S$-Box
 in einem Bit ändert die Ausgabe in mindestens zwei Bit --~\highl{Diffusion}~--
 und jedes Ausgabebit hängt nach fünf Runden von allen Schlüssel- und Klartextbits ab
 --~\highl{Konfusion}.
@@ -2234,7 +2237,7 @@ Schlüssel~$k_{1}$ und $k_{2}$ gibt es im Allgemeinen keinen Schlüssel~$k_{3}$,
 so dass $DES_{k_{3}}$ die gleiche Abbildung beschreibt wie $DES_{k_{1}}\circ
 DES_{k_{2}}$. Wäre $DES$ abgeschlossen bzgl. Verkettung (besäße also die
 Gruppeneigenschaft), so könnte man statt der Verkettung $DES_{k_{1}}\circ
-DES_{k_{2}}$ einfach die einfache Verschlüsselung $DES_{k_{3}}$ angreifen, der
+DES_{k_{2}}$ die einfache Verschlüsselung $DES_{k_{3}}$ angreifen, der
 Schlüsselraum hätte sich also nicht vergrößert. Es gilt sogar, dass die Gruppe
 von Verschlüsselungen, die durch beliebige Verkettungen von
 DES-Verschlüsselungen erzeut wird, mehr als $10^{2499}$ Verschlüsselungen
@@ -2320,7 +2323,7 @@ nach folgender Vorschrift erzeugt:
      \qquad 0\leq i < r
 \end{gather*}
 Dadurch wiederholen sich die Rundenschlüssel zyklisch ab der 10.~Runde;
-$k_{i} = k_{i+9} = k_{i+18} = \dotsb$
+$k_{i} = k_{i+9} = k_{i+18} = \dotsb$.
 
 Die Diffusion $D\colon \Z_{2}^{6} \mapsto \Z_{2}^{8}$ für den ersten Schritt
 sei folgende lineare Abbildung
@@ -2764,6 +2767,10 @@ acht Bit.
   der EFF zum DES-Cracker} und
 \href{http://cryptome.org/jya/cracking-des/cracking-des.htm}{Cracking
   DES von der EFF}
+
+  2006: Ein Team der Universitäten Kiel und Bochum entwickeln
+  COPACOBANA. Mit Kosten von etwa US-\$~10\,000 berechnet die Maschine
+  65~Millarden DES"=Schlüssel pro Sekunde.
  \item Es gibt bei DES \highl[Schlüssel!schwacher]{schwache Schlüssel}, die für alle Runden den gleichen
   Rundenschlüssel erzeugen. Aber man kann diese auch einfach beim Einsatz
   vermeiden.
@@ -2786,7 +2793,7 @@ Brute-Force-Angriff benötigt werden: $2^{56}$. Deshalb sind es 16~Runden!
 
 \subsubsection{DES und lineare Kryptoanalyse}
 
-Von M.\,Matsui auf der Konferenz EUROCRYPT im Jahre 1993 vorgestellt
+Von \textsc{M.\,Matsui} auf der Konferenz EUROCRYPT im Jahre 1993 vorgestellt
 (\cite{matsui1}). War den Designern von DES nicht bekannt.
 
 Weder die $S$-Boxen noch die gesamte Verschlüsselung beschreiben eine
@@ -2802,17 +2809,19 @@ $p\ne\frac{1}{2}$, Ausnutzung der Asymmetrie (insbesondere ist der
 fünfte $S$-Boxtyp des DES dafür anfällig) liefert eine Einschränkung
 der Schlüssel.
 
-In der Arbeit von M.\,Mitsui wurde gezeigt, dass man für einen
+In der Arbeit von \textsc{M.\,Matsui} wurde gezeigt, dass man für einen
 Known-Plaintext-Angriff nur $2^{43}$~Paare, d.\,h. sie ist besser als die
 \highl[Kryptoanalyse!differentielle]{differentielle Kryptoanalyse}.
 
 \section{International Data Encryption Algorithm (IDEA)}
 
-Der \highl{International Data Encryption Algorithm} (kurz \highl{IDEA}) wurde zu
-Beginn der neunziger Jahre des letzten Jahrhunderts in einer
-Gemeinschaftsarbeit von \textsc{James Massey} und \textsc{Xueija Lai} von der ETH~Zürich und der
-Ascom Systec~AG entwickelt. Die Ascom Systec~AG hält zum gegenwärtigen
-Zeitpunkt noch einige Patente für IDEA. Dennoch wird der Algorithmus im
+Der \highl{International Data Encryption Algorithm} (kurz
+\highl{IDEA}) wurde zu Beginn der neunziger Jahre des letzten
+Jahrhunderts in einer Gemeinschaftsarbeit von \textsc{James Massey}
+und \textsc{Xueija Lai} von der ETH~Zürich und der Ascom Systec~AG
+entwickelt. Die Ascom Systec~AG hält bis 2010 bzw. 2011 das Patent für
+IDEA. Der Algorithmus kann jedoch für nichtkommerzielle Verwendung
+kostenlos benutzt werden. Daher wird er unter anderem im
 PGP"=Verfahren eingesetzt.
 
 IDEA arbeitet mit der Blocklänge von 64~Bit, einer Schlüssellänge von 128~Bit
@@ -2858,10 +2867,10 @@ Nach der 8.\,Runde folgt eine Schlussrunde:
      x_{4}' &= x_{4}\odot k_{9_{4}}
 \end{align*}
 
-Da IDEA andere algebraische Operationen einsetzt als die Feistel-Chiffre,
-bezeichnet man ihn auch nicht als eine Feistel-Chiffre. Dennoch ist er so
-konstruiert, dass die Verschlüsselungsfunktion auch als
-Entschlüsselungsfunktion verwendet werden kann.
+Da IDEA andere algebraische Operationen einsetzt, wird er nicht als
+Feistel-Chiffre bezeichnet. Dennoch ist er so konstruiert, dass die
+Verschlüsselungsfunktion auch als Entschlüsselungsfunktion verwendet
+werden kann.
 
 Die Sicherheit von IDEA ist auf der Unverträglichkeit der drei
 unterschiedlichen arithmetischen Operationen begründet. Es ist zwar eine
@@ -2931,7 +2940,7 @@ Blowfish (1994), Twofish (1998) von Bruce Schneier
 \begin{description}
  \item[SAFER] 1995, Massey
  \item[CAST] 1990, 1997 -- wird bei PGP benutzt
- \item[SKipjack] NSA, 1990
+ \item[Skipjack] NSA, 1990
  \item[KASUMI] Weiterentwicklung von MISTY, wird zur Verschlüsselung bei UMTS
   eingesetzt.
 \end{description}
@@ -3233,7 +3242,8 @@ zu $p$ bezüglich~$\odot$.
     \begin{align*}
       q_{1}(x) &= x + 1\\
       b_{2}(x) &= b_{0}(x) - q_{1}(x)\cdot b_{1}(x) = x^{8} + x^{4} + x^{3} +
-         x +1 - (x+1)\cdot(x^{7} + x^{6} + x^{3} + x + 1) = x^{6}+x^{2}+x\\
+         x +1 - (x+1)\\
+         &\qquad\cdot(x^{7} + x^{6} + x^{3} + x + 1) = x^{6}+x^{2}+x\\
       u_{2}(x) &= u_{0}(x) - q_{1}(x)\cdot u_{1}(x) = 1 - (x+1)\cdot0 = 1\\
       v_{2}(x) &= v_{0}(x) - q_{1}(x)\cdot v_{1}(x) = 0 - (x+1)\cdot1 = x+1
     \end{align*}
@@ -3243,14 +3253,14 @@ zu $p$ bezüglich~$\odot$.
     ---\\
     $x^{6} + x^{2} + x + 1$\\
     $\oplus(x^{6} + x^{2} + x)$\\
-    ---
+    ---\\
     1
 
     Die Zwischenergebnisse:
     \begin{align*}
       q_{2}(x) &= x+1\\
-      b_{3}(x) &= b_{1}(x) - q_{2}(x)\cdot b_{2}(x)
-         = (x^{7} +x^{6} +x^{3} +x +1) - (x+1)\cdot (x^{6}+x^{2}+x) = 1\\
+      b_{3}(x) &= b_{1}(x) - q_{2}(x)\cdot b_{2}(x)\\
+      &= (x^{7} +x^{6} +x^{3} +x +1) - (x+1)\cdot (x^{6}+x^{2}+x) = 1\\
       u_{3}(x) &= u_{1}(x) - q_{2}(x)\cdot u_{2}(x)
          = 0 - (x+1)\cdot 1 = x+1\\
       v_{3}(x) &= v_{1}(x) - q_{2}(x)\cdot v_{2}(x)
@@ -3398,7 +3408,7 @@ mit dem Inversen $c^{-1}(x) = 0B x^{3} + 0D x^{2} + 09 x + 0E$
 
  \item[2000:] Wird Rijndael als Sieger bekannt gegeben.
 
- \item[2002:] Rijndael wird als AES (FIPS~197\todo{Link einfügen}) veröffentlicht.
+ \item[2002:] Rijndael wird als AES (FIPS~197, siehe~\cite{fips197}) veröffentlicht.
 \end{description}
 
 Durch die Forderung, dass AES öffentlich sein soll, ist der mathematische
@@ -3611,8 +3621,7 @@ mehr.
     \end{tabular}
   }
   \caption{Die Substitutionsbox $S_{8}$ für den SubBytes-Schritt im AES;
-    Quelle: \href{http://en.wikipedia.org/wiki/Rijndael_S-box}{englische
-  Wikipedia}}
+    Quelle: Seite~16 in \cite{fips197}}
   \label{tab:s8-aes}
 \end{table}
 
@@ -3666,11 +3675,11 @@ angewendet.
 \begin{gather*}
   \begin{pmatrix}
     e^{(0,s)} \\ e^{(1,s)}\\ e^{(2,s)}\\ e^{(3,s)}
-  \end{pmatrix} = S_{32}(
+  \end{pmatrix} = S_{32}\left(
      \begin{pmatrix}
        d^{(0,s)} \\ d^{(1,s)}\\ d^{(2,s)}\\ d^{(3,s)}
      \end{pmatrix}
-     )
+     \right)
 \end{gather*}
 Diese entspricht folgender Berechnung im $\nicefrac{\F_{256}[x]}{x^{4}+1}$:
 \begin{gather*}
@@ -3712,14 +3721,14 @@ was 127\,Gigabit entspricht, was sich praktisch nur schwer umsetzen lässt.
 \begin{figure}
   \centering
   \input{aes-s32.pdf_t}
-  \caption{Schematische Darstellung der $S$-Box $S_{32}$ für den MixColumns im
+  \caption{Schematische Darstellung der $S$-Box $S_{32}$ für MixColumns im
     AES}
   \label{fig:s32}
 \end{figure}
 
 \begin{gather}
   \label{eq:xtime}
-  \mathit{xtime}(p_{7}p_{6}\dotso p_{0}) =
+  \mathrm{xtime}(p_{7}p_{6}\dotso p_{0}) =
      \begin{cases}
        \pi_{6}\pi_{5}\pi_{4}\pi_{3}\:\pi_{2}\pi_{1}\pi_{0} 0&\colon \pi_{7}=0\\
        (\pi_{6}\pi_{5}\pi_{4}\pi_{3}\:\pi_{2}\pi_{1}\pi_{0} 0) \oplus (0001\,1011)&
@@ -3729,7 +3738,7 @@ was 127\,Gigabit entspricht, was sich praktisch nur schwer umsetzen lässt.
 
 Aber durch eine geschickte Umordnung der Operanden, wie es in
 \autoref{eq:aes-s32} geschehen ist, kann man eine sehr symmetrische Struktur
-(\autoref{fig:s32}) erreichen. Die Funktion $xtime\colon\F_{256}\rightarrow
+(\autoref{fig:s32}) erreichen. Die Funktion $\mathrm{xtime}\colon\F_{256}\rightarrow
 \F_{256}$ (\autoref{eq:xtime}) berechnet dabei für ein $p\in\F_{256}$ das
 Produkt
 \begin{align*}
@@ -3836,7 +3845,7 @@ Verfahren für dieses augenscheinlich unlösbare Problem vor.
 \end{table}
 
 Alice und Bob verabreden eine große Primzahl~$p$ und eine primitive
-Wurzel~$g$, die beide öffentlich bekannt seien können. Danach wählt jeder für
+Wurzel~$g$, die beide öffentlich bekannt sein können. Danach wählt jeder für
 sich eine zufällige, große Zahl~$a$ bzw. $b$. Alice berechnet daraus
 $\alpha=g^{a}\pmod{p}$ und Bob berechnet $\beta=g^{b}\pmod{p}$. Diese beiden
 Ergebnisse tauschen dann beide wieder aus, wobei die Zahlen öffentlich
@@ -3913,7 +3922,7 @@ der Einwegfunktion, das Funktionen beschreibt, die einfach zu berechnen, aber
   Eine Funktion $f\colon\N\rightarrow\N$ ist genau dann eine
   \highl{Einwegfunktion}, wenn sie die folgenden Eigenschaften besitzt
   \begin{itemize}
-   \item $f$ ist im worst case in Polynomialzeit zu berechnen, d.\,h.
+   \item $f$ ist im worst case\help{Ist das wirklich der worst case?} in Polynomialzeit zu berechnen, d.\,h.
     $f\in\FP$ und 
    \item für fast alle $y\in W_{f}$ gibt es keinen probabilistischen
     Algorithmus, der im average case ein zugehöriges Urbild~$x$ mit $f(x)=y$
@@ -4083,7 +4092,7 @@ ist eine multiplikative Gruppe der Ordnung $\phi(n)$.
 \end{satz}
 
 \begin{defini}
-  \label{def:1}
+  \label{def:1}\todo{Die Definition muss eher kommen.}
   Eine Zahl~$a$ ($1\leq a< n$) heißt genau dann
   \highl[Wurzel!primitive]{primitive Wurzel} von $n$, wenn
   $a$ die folgenden Eigenschaften erfüllt
@@ -5276,6 +5285,9 @@ prüfen kann. \autoref{tab:zero-know}
   signatures and public-key cryptosystems"', Communications of the
   ACM, 21(2):120-126, February 1978.\\
   {\small \url{http://people.csail.mit.edu/rivest/""RivestShamirAdleman-AMethodForObtainingDigitalSignaturesAndPublicKeyCryptosystems.pdf}}
+\bibitem{fips197} "`Advanced Encryption Standard, FIPS PUB 197"',
+  National Institute of Standards and Technology, 2001,\\
+  \url{http://www.csrc.nist.gov/publications/fips/fips197/fips-197.pdf}
 \end{thebibliography}
 
 \chapter{Übungsaufgaben}
